# automotive-can-shared-memory

./: .gitignore  .podmanignore  CLAUDE.md  CMakeLists.txt  CMakeLists_linear_probing.txt  Containerfile  DESIGN_SPECIFICATION.md  HASH_COLLISION_ANALYSIS.md  Makefile_linear_probing  README.md  README_LINEAR_PROBING.md  REQUIREMENT.md  SESSION_SUMMARY.md  bbhash_demo  bbhash_demo.cpp  build_and_test.sh  can_id_sample.txt  can_perfect_hash_demo.h  can_shm_api.c  can_shm_api.h  can_shm_linear_probing.c  can_shm_linear_probing.h  can_shm_perfect_hash.c  can_shm_perfect_hash.h  can_shm_types.h  hash_analysis.py  practical_large_hash.py  pthash_can_demo.cpp  pthash_simple_demo.cpp  pthash_standalone_demo.cpp  test_can_shm.c  test_cases.md  test_linear_probing.c  test_perfect_hash.c
tools/: generate_perfect_hash.py
